add working tabs and content generation for the top tracks

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -84,7 +84,7 @@ div.box{
 }
 
 ul.content.list {
-    color: white;
+    color: whitesmoke;
 }
 
 /* ----------------------------------------------------------------- */
