--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -89,6 +89,10 @@ div.box{
 
 div#shadow-box{
     background-color: #1ED760;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1400px;
+    
 }
 
 ul.content.list {
@@ -100,10 +104,11 @@ ul.content.list {
 }
 /* ----------------------------------------------------------------- */
 
+
 #main-content {
     background-color: #1ED760;
     color: white;
-    max-width: 1400px;
+    
 
 }
 
