--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -174,9 +174,9 @@ ul.content.list {
     display: flex;
     align-items: center;
     flex-direction: column-reverse;
-    justify-content: space-between;
+    justify-content: space-evenly;
     max-width: 30%;
-    
+    padding-bottom: 5px;
     color: #1ED760;
     box-shadow:0px 0px 10px #232527;
 }
