styles to footer and modal

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -43,6 +43,7 @@ header {
 .modal-card-body .box {
     background-color: #35383b;
     text-align: center;
+    color: white;
 }
 
 .modal-card-head,
@@ -95,13 +96,14 @@ li.is-active a{
 div.box{
     background-color: #35383b;
     box-shadow: none;
-    padding: 0px;
+    padding: 5px;
+    color: white;
 }
 
 
 
 div#shadow-box {
-    background-color: #1ED760;
+    background-color: #35383b;
 }
 
 
@@ -268,3 +270,4 @@ li img {
 #graph-content-track img {
     margin-top: 35%;
   }
+
