--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -24,6 +24,8 @@ header {
 #graph-content {
     background-color: white;
 }
+/* ----------------------------------------------------------------- */
+
 
 .modal-background {
     pointer-events: none;
@@ -79,22 +81,26 @@ header {
 .tabs.is-boxed li.is-active {
     background-color: #3C91E6;
     color: white;
-    height: 80%;
+    height:80%;
 }
 
-li.is-active a {
+li.is-active a{
     background-color: #3C91E6;
     margin-top: .25em;
-
-
+    
+    
 }
 
-div.box {
+
+
+div.box{
     background-color: #35383b;
     box-shadow: none;
     padding: 5px;
     color: white;
 }
+
+
 
 div#shadow-box {
     background-color: #35383b;
@@ -106,11 +112,15 @@ div#shadow-box {
     background-color: #35383b;
     padding: 10px;
 }
+/* ----------------------------------------------------------------- */
+
 
 #main-content,
 #about.box {
     background-color: #1ED760;
     color: white;
+    
+
 }
 
 #content-cols {
@@ -118,12 +128,13 @@ div#shadow-box {
     border-radius: 8px;
 }
 
-#content-cols div.column {
+#content-cols div.column{
     display: flex;
     flex-direction: column;
+    
 }
 
-#data-cols {
+#data-cols{
     margin: 10px;
 }
 
@@ -131,17 +142,19 @@ h2.title {
     color: whitesmoke;
 }
 
+
+
 #artist-data,
 #track-data {
     background-color: #3C91E6;
 }
 
 h3.title {
-    text-align: left;
+   text-align: left;
 }
 
 .container.is-fluid {
-    max-width: none !important;
+    max-width: none!important;
     padding-left: 32px;
     padding-right: 32px;
     width: 100%;
@@ -154,13 +167,13 @@ ul.content.list {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
-
+    
 }
 
 .content li+li {
-    margin: 10px;
-    padding: 5px 2.5px;
-
+   margin: 10px;
+    padding: 5px 2.5px ;
+    
 }
 
 .list li {
@@ -174,12 +187,16 @@ ul.content.list {
     max-width: 30%;
     padding-bottom: 5px;
     color: #1ED760;
-    box-shadow: 0px 0px 10px #232527;
+    box-shadow:0px 0px 10px #232527;
 }
 
-li a {
+
+
+li a{
     border-radius: 10px;
+
 }
+
 
 li img {
     height: auto;
@@ -196,6 +213,8 @@ li img {
     margin-left: auto;
     margin-right: auto;
 }
+ 
+
 
 #about {
     background-color: white;
@@ -207,6 +226,8 @@ footer {
     padding: 20px;
 }
 
+
+
 .list li {
     background-color: #35383b;
     border-radius: 5px;
@@ -216,13 +237,18 @@ footer {
     flex-direction: column-reverse;
     justify-content: space-between;
     max-width: 30%;
+    
     color: #1ED760;
-    box-shadow: 0px 0px 10px #232527;
+    box-shadow:0px 0px 10px #232527;
 }
 
-li a {
+
+
+li a{
     border-radius: 10px;
+
 }
+
 
 li img {
     height: auto;
@@ -240,10 +266,8 @@ li img {
     margin-right: auto;
 }
 
-#graph-content-artist img,
+#graph-content-artist img, 
 #graph-content-track img {
     margin-top: 35%;
-
-}
-
+  }
 
